test_programs/compile_failure/noirc_frontend_tests_unused_items_errors_on_unused_private_import/src/main.nr

    mod foo {
        pub fn bar() {}
        pub fn baz() {}

        pub trait Foo {
        }
    }

    use foo::bar;
    use foo::baz;
    use foo::Foo;

    impl Foo for Field {
    }

    fn main() {
        baz();
    }
    